# PromptSec-FM

./: .env.example  .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
annotations/pilot_v0.1/: annotator_a.jsonl  annotator_b.jsonl
configs/: README.md  dataset_v0.1.yaml  dataset_v0.2.yaml  gold_subset_v0.1.yaml  policybench_codex_pilot_100_v0.1.yaml  policybench_codex_pilot_100_v0.1_v5.yaml  policybench_codex_pilot_100_v0.1_v6.yaml  policybench_codex_pilot_100_v0.1_v7.yaml  policybench_codex_pilot_100_v0.1_v8.yaml  policybench_codex_pilot_100_v0.1_v9.yaml  policybench_codex_v0.1.yaml  policybench_local_v0.1.yaml  policybench_v0.1.yaml  xlmr_multitask_colab_v0.1.yaml  xlmr_multitask_colab_v0.2.yaml
configs/sources/: agentdojo.toml  bipia.toml  injecagent.toml  notinject.toml  open_prompt_injection.toml  promptinject.toml
data/: README.md
data/pilot_v0.1/: items.jsonl
docs/: Matrice_litterature_PromptSec-FM.xlsx  annotation_guidelines.md  annotation_pilot_v0.1.md  family_mapping_v0.1.md  family_mapping_v0.2.md  license_questions.md  policybench_annotation_protocol.md  policybench_codex_generation.md  policybench_counterfactual_design.md  policybench_data_card.md  policybench_generation_protocol.md  policybench_limitations.md  policybench_local_generation.md  policybench_reproducibility.md  policybench_v0.1_design.md  taxonomy.md  taxonomy_migration_v1.md  xlmr_multitask_colab_v0.1.md  xlmr_multitask_colab_v0.2.md
examples/: promptsec-annotation-example-v1.json
manifests/: README.md  source-lock.json
manifests/sources/: agentdojo.json  bipia.json  injecagent.json  notinject.json  open_prompt_injection.json  promptinject.json
notebooks/: PromptSec_FM_XLMR_Multitask_Colab.ipynb  PromptSec_FM_XLMR_Multitask_Colab_v0_2.ipynb
prompts/policybench/: codex_batch_v1.txt  codex_batch_v2.txt  codex_batch_v3.txt  codex_batch_v4.txt  codex_batch_v5.txt  codex_batch_v6.txt  codex_batch_v7.txt  codex_batch_v8.txt  codex_batch_v9.txt  generate_policy_variant_v1.txt  generate_scenario_v1.txt  paraphrase_v1.txt  system_v1.txt  validate_semantics_v1.txt
reports/: README.md
reports/data_statistics/: dataset_v0.1.md  dataset_v0.2.json  dataset_v0.2.md
reports/label_mapping/: review_queue_v0.1.jsonl
reports/license_review/: license_evidence_v0.1.json  phase_3_4.md  redistribution_matrix_v0.1.json
reports/pilot_v0.1/: report_template.md
reports/quality_review/: adjudication_state.json  corpus_quality_v0.2.json  corpus_quality_v0.2.md  gold_candidate_selection_v0.1.json  phase_3_4.md  review_priority_summary.md
reports/source_integration/: phase_3_3.md
schemas/: promptsec-annotation-v1.schema.json  promptsec-dataset-record-v0.1.schema.json  promptsec-policybench-record-v0.1.schema.json  promptsec-release-record-v0.1.schema.json  promptsec-release-record-v0.2.schema.json  source-license-manifest-v0.1.schema.json
scripts/: adjudicate_gold.py  adjudicate_template.py  build_dataset.py  build_xlmr_colab_notebook.py  build_xlmr_colab_notebook_v0_2.py  compute_agreement.py  create_gold_review_packets.py  create_policybench_review_packets.py  download_sources.py  evaluate_xlmr_multitask.py  export_agentdojo_snapshot.py  fetch_sources.py  generate_policybench.py  package_policybench_for_colab.py  report_policybench.py  select_policybench_pilot.py  train_xlmr_multitask.py  validate_dataset.py  validate_pilot.py  validate_policy_catalog.py  validate_policybench.py
src/promptsec/: __init__.py
tests/data/: test_acquisition.py  test_agentdojo_importer.py  test_agentdojo_snapshot.py  test_bipia_importer.py  test_cli.py  test_config.py  test_gold_review.py  test_injecagent_importer.py  test_notinject_importer.py  test_open_prompt_injection_importer.py  test_packaging.py  test_pipeline.py  (+10 more)
(+144 files in other folders)
