[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "promptsec-dataset"
version = "0.2.0"
description = "Reproducible, provenance-aware dataset pipeline for PromptSec-FM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.23,<5",
  "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
agentdojo-snapshot = [
  "agentdojo==0.1.35",
]
baselines = [
  "psutil>=6,<8",
  "scikit-learn>=1.6,<2",
]
training = [
  "nbformat>=5.10,<6",
  "numpy>=1.26,<3",
  "psutil>=6,<8",
  "safetensors>=0.5,<1",
  "scikit-learn>=1.6,<2",
  "torch>=2.4,<3",
  "transformers>=4.50,<5",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
promptsec-dataset = "promptsec.data.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/promptsec-dataset/schemas" = ["schemas/*.json"]
"share/promptsec-dataset/configs" = ["configs/*.yaml"]
"share/promptsec-dataset/configs/sources" = ["configs/sources/*.toml"]
"share/promptsec-dataset/manifests" = ["manifests/*.json"]
"share/promptsec-dataset/manifests/sources" = ["manifests/sources/*.json"]
"share/promptsec-dataset/policies/policybench" = ["data/policybench/policies/*.yaml"]
"share/promptsec-dataset/prompts/policybench" = ["prompts/policybench/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --basetemp=.pytest-tmp"
markers = [
  "integration: validates a locally available immutable release",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
